--- a/Article list/1.md
+++ b/Article list/1.md
@@ -1,14 +1,11 @@
 # 要么孤独，要么庸俗
 
-一月 23, 2020
 
 <br>
 
 01
 
 刷朋友圈的时候，看到一条由三感音乐故事拍摄的短视频，被文案戳中了泪点。
-
-<video src="//player.bilibili.com/player.html?aid=18154913&cid=29640604&page=1" controls="controls">您的浏览器不支持播放该视频！</video>
 
 > 22岁生日，一个人吃火锅，还好锅底可以点最辣的；187次路过的码头，4次遇到一对情侣，两个人眼中的风景，也不见得更好看；第6次一个人搬家，扔掉了3箱旧东西，很遗憾，好像连回忆也一并被丢弃了。
 
@@ -113,3 +110,4 @@
 
 Author：衷曲无闻
 Source：简书
+Time：一月 23, 2020
