--- a/Article list/6.md
+++ b/Article list/6.md
@@ -127,5 +127,5 @@
 在备忘录记下更多想要做的事情，每天睡到自然醒，冒着热气的家庭火锅，对日渐增多的脂肪感到烦恼，听到外面烟花绽放的声音，读几本心仪的书，以及闲来无事，想从快乐的句子中吸取更多一些快乐成分的心情...这些未尝不是近日的快乐。
 
 
-BGM：安静的午后
+BGM：安静的午后 <br>
 Date：三月 01, 2020
